[package]
name = "vinylla"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.*"
crossterm = "0.24.*"
reqwest = {version = "0.11.*", features = ["blocking"]}
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
serde_arrays = "0.1.0"

